--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
-  "name": "fishbook",
+  "name": "FishBook",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "jquery": "^3.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  },
+  "scripts": {
+    "start": "webpack -w --mode=development",
+    "postinstall": "webpack --mode=production"
+  }
 }
