--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
+  url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -30,22 +31,17 @@ development:
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
   #username: fishbook
-
   # The password associated with the postgres role (username).
   #password:
-
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
   #host: localhost
-
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
-
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
-
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
   #   log, notice, warning, error, fatal, and panic
@@ -80,6 +76,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  host: db
   database: fishbook_production
   username: fishbook
-  password: <%= ENV['FISHBOOK_DATABASE_PASSWORD'] %>
+  # password: <%= ENV['FISHBOOK_DATABASE_PASSWORD'] %>
+  password:
