--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "http": "0.0.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
