--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "throttle-debounce": "^2.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
   },
